tests/NormalTests/paczka1/small_fuzzy/62419499.err
Error in line 1: ylTpwn S622 44,1
Error in line 9: Trf A626 61,4
Error in line 11: Trf S622 17,8
